[project]
name = "tgmix"
version = "0.1.7"
description = "A tool to process Telegram chat exports into an AI-friendly format, inspired by Repomix."
requires-python = ">=3.13"
dependencies = [
    "tqdm>=4.67.1",
]

[project.scripts]
tgmix = "tgmix.main:main"

[tool.setuptools.package-data]
tgmix = ["config.json"]
