[project]
name = "tgmix"
version = "0.2.0"
description = "A tool to process Telegram chat exports into an AI-friendly format, inspired by Repomix."
requires-python = ">=3.13"
dependencies = [
    "phonenumbers>=9.0.12",
    "rs-bpe>=0.1.0",
    "tqdm>=4.67.1",
    "ujson>=5.11.0",
]

[project.scripts]
tgmix = "tgmix.main:main"

[tool.setuptools.package-data]
tgmix = ["config.json"]
